--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.servlet.multipart.max-file-size=70MB
 spring.servlet.multipart.max-request-size=70MB
 
+spring.main.banner-mode=console
 
