Refactorización del código
Muestra logs para identificar errores mas facilmente.
Codigo mas limpio y documentado.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,32 @@
 spring.application.name=SistemaAcademico
 server.port=8080
 
+# Configuración de DataSource
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=system
 spring.datasource.password=root
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# Configuración del pool de conexiones (HikariCP, usado por Spring Boot por defecto)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=20000
+
+# Configuración de JPA (opcional, solo para mostrar SQL)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Configuración de tamaño máximo para multipart (archivos)
 spring.servlet.multipart.max-file-size=70MB
 spring.servlet.multipart.max-request-size=70MB
 
+# Configuración de banner
 spring.main.banner-mode=console
 
+# Configuración de logging
+logging.level.root=INFO
+logging.level.org.example.sistemaacademico=DEBUG
+logging.file.name=logs/sistema-academico.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
